# rlhf

./: .gitignore  README.md  environment.yml  generate_feedback.sh  notes.txt  pyproject.toml
ml_project/: types.py
ml_project/reward_model/: finetune_reward_model.py  networks.py  networks_old.py
ml_project/rl/: generate_videos_and_data.py  train_rl_agent.py
ml_project/rlhfblender/: common.py  export_videos.py  generate_descriptive_feedback.py  generate_feedback.py  plot_reward_model_output.py  train_agent.py  train_reward_model.py
rl_logs/sac_HalfCheetah-v3_diff_ppo_expert_gamma_0/: events.out.tfevents.1716910998.JP.3787103.0
rl_logs/sac_HalfCheetah-v3_sde_evaluative_3653_0/: events.out.tfevents.1715340117.JP.977144.0  events.out.tfevents.1715340161.JP.977376.0  events.out.tfevents.1715340264.JP.977862.0  events.out.tfevents.1715340281.JP.978044.0  events.out.tfevents.1715340300.JP.978206.0  events.out.tfevents.1715340423.JP.978745.0  events.out.tfevents.1715340519.JP.979289.0  events.out.tfevents.1715340562.JP.979542.0  events.out.tfevents.1715340580.JP.979542.1  events.out.tfevents.1715340599.JP.979542.2  events.out.tfevents.1715340618.JP.979542.3  events.out.tfevents.1715340637.JP.979542.4  events.out.tfevents.1715340655.JP.979542.5  events.out.tfevents.1715340674.JP.979542.6  events.out.tfevents.1715340693.JP.979542.7  events.out.tfevents.1715340712.JP.979542.8  events.out.tfevents.1715340731.JP.979542.9  events.out.tfevents.1715340750.JP.979542.10  events.out.tfevents.1715340768.JP.979542.11  events.out.tfevents.1715340787.JP.979542.12  events.out.tfevents.1715340806.JP.979542.13  events.out.tfevents.1715340825.JP.979542.14  events.out.tfevents.1715340844.JP.979542.15  events.out.tfevents.1715340863.JP.979542.16  events.out.tfevents.1715340881.JP.979542.17  events.out.tfevents.1715340900.JP.979542.18  events.out.tfevents.1715340919.JP.979542.19
rlhf/: __init__.py  common.py  generate_feedback.py  generate_feedback_2.py  networks.py  plot_reward_model_output.py  train_agent.py  train_reward_model.py  train_reward_model_2.py  types.py
