[tool.poetry]
name = "ml-project"
version = "0.1.0"
description = "Project for the AI Center Projects in Machine Learning Research course"
authors = [
  "András Geiszl <geiszla@gmail.com>",
  "Gian Hess <gihess@student.ethz.ch>",
  "Yunxiang Guo <yunguo@student.ethz.ch>",
  "Yves Bicker <bickery@student.ethz.ch>",
]
license = "UNLICENSED"
readme = "README.md"
repository = "https://github.com/xiaoxiaoshikui/Machine-Learning-Project-for-ETH-AI-Center"
packages = [{ include = "ml_project" }]

[tool.poetry.scripts]
train = "ml_project.rl.train_rl_agent:main"
generate = "ml_project.rl.generate_videos_and_data:main"
create_dataset = "ml_project.reward_model.create_preference_dataset:main"
generate_reward = "ml_project.rl.generate_reward_data:main"
pretrain_reward = "ml_project.reward_model.pretrain_reward_model:main"
finetune_reward = "ml_project.reward_model.finetune_reward_model:main"

feedback = "ml_project.rlhfblender.generate_feedback:main"
reward = "ml_project.rlhfblender.train_reward_model:main"

[tool.poetry.dependencies]
python = "~3.11"
# Required for mujoco-py to compile properly
cython = "<3"
flask = "^3.0.2"
gym = "^0.26.2"
imitation = "^1.0.0"
mujoco-py = "^2.1.2.14"
numpy = "^1.26.4"
optuna = "^3.5.0"
pytorch-lightning = "^2.2.0.post0"
ray = { extras = ["tune"], version = "^2.9.3" }
rl-zoo3 = "^2.2.1"
# Required for using `gym` with `stable-baselines3`
shimmy = "^1.3.0"
stable-baselines3 = "^2.2.1"
tensorboard = "^2.16.2"
torch = "^2.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
conda-lock = "^2.5.5"
pre-commit = "^3.6.2"
pydocstyle = "^6.3.0"
pylint = "^3.0.4"
pyright = "^1.1.351"
ruff = "^0.2.2"
torch-tb-profiler = "^0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.pyright]
pythonVersion = "3.11"
pythonPlatform = "All"

include = ["ml_project"]
exclude = ["**/__pycache__"]

typeCheckingMode = "basic"

useLibraryCodeForTypes = true
stubPath = "python-type-stubs"

[tool.pylint.TYPECHECK]
generated-members = "torch.*"

[tool.pylint.MAIN]
disable = "duplicate-code,too-many-arguments,too-many-locals"
